[gd_scene load_steps=4 format=2]

[ext_resource path="res://actor/constuction/Barrack.gd" type="Script" id=1]
[ext_resource path="res://assets/construction/barrack2.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 48.0
height = 32.0

[node name="barrack" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 0.26534, 0.284192 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="spawnList" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="spawnList"]
position = Vector2( -40, -86 )

[node name="2" type="Position2D" parent="spawnList"]
position = Vector2( 40, -86 )

[node name="3" type="Position2D" parent="spawnList"]
position = Vector2( 88, -40 )

[node name="4" type="Position2D" parent="spawnList"]
position = Vector2( 88, 40 )

[node name="5" type="Position2D" parent="spawnList"]
position = Vector2( 40, 88 )

[node name="6" type="Position2D" parent="spawnList"]
position = Vector2( -40, 88 )

[node name="7" type="Position2D" parent="spawnList"]
position = Vector2( -88, 40 )

[node name="8" type="Position2D" parent="spawnList"]
position = Vector2( -88, -40 )

[node name="trainingProgress" type="ProgressBar" parent="."]
visible = false
margin_left = -32.0
margin_top = 19.0
margin_right = 32.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = -33.0
margin_top = -48.0
margin_right = 32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -40.0
margin_top = -56.0
margin_right = 40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
